Change "wolves" -> "bandits"
There are no wolves in Thailand.

--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
             </div>
             <div class="text">
                 <p>After many years passed, people came to settle in villages around Ayutthaya.</p>
-                <p>Sometimes, villagers would spot an amber tiger in the forest. The tiger would help lead lost travelers out of the forest, or bound down from the mountains to defend the villages from wolves.</p>
+                <p>Sometimes, villagers would spot an amber tiger in the forest. The tiger would help lead lost travelers out of the forest, or bound down from the mountains to defend the villages from bandits.</p>
                 <p>The villagers eventually came to revere the friendly amber tiger and bestowed upon her the title of “Tiger Queen”.</p>
             </div>
         </template>
