--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
             </div>
         </template>
         <template data-page-number=1>
-            <div class="image" bac>
+            <div class="image">
                 <img src="assets/img/rockclimbprincess.png">
             </div>
             <div class="text">
@@ -396,7 +396,35 @@
             alert("I see. Thank you for your honesty!")
             quiz.style.display = 'none'
         }
+        const preloadImage = (src) => {
+            return new Promise((resolve, reject) => {
+                const image = new Image();
+                image.src = src;
+                image.onload = () => resolve(image);
+                image.onerror = (error) => reject(error);
+            });
+        };
+        async function preloadImages() {
+            const templates = document.querySelectorAll('template');
+            const imageUrls = [];
+
+            for (const template of templates) {
+                const divElements = template.content.children;
+                for (const div of divElements) {
+                    const imgElements = div.getElementsByTagName('img');
+                    imageUrls.push(...Array.prototype.slice.call(imgElements).map(i => i.src));
+                }
+            }
+
+            const images = [];
+            for (const src of imageUrls) {
+                const image = await preloadImage(src);
+                images.push(image);
+            }
+        }
+        preloadImages()
         renderPage()
+        
     </script>
 </body>
 </html>
