--- a/index.html
+++ b/index.html
@@ -146,6 +146,15 @@
         .text > p:last-of-type {
             margin-bottom: 0;
         }
+        .btn-nav {
+            font-size: 18px;
+            border: none;
+            border-radius: 50%;
+            display: inline-block;
+            padding: 8px 16px;
+            text-decoration: none;
+            cursor: pointer;
+        }
     </style>
 </head>
 <body>
@@ -307,8 +316,8 @@
                 <button onclick="closeQuiz()">I'm not the Tiger Queen</button>
             </div>
         </div>
-        <button class="btn-prev" onclick="prevPage()">&lt;</button>
-        <button class="btn-next" onclick="nextPage()">&gt;</button>
+        <button class="btn-nav btn-prev" onclick="prevPage()">‹</button>
+        <button class="btn-nav btn-next" onclick="nextPage()">›</button>
     </div>
     <script>
         const TEMPLATES = document.querySelectorAll('.book template')
@@ -346,12 +355,21 @@
                     // audio.play();
                 }
             }, 300)
+            const btnPrev = document.querySelector('.btn-prev')
+            const btnNext = document.querySelector('.btn-next')
+            if (currentPage === 0) {
+                btnPrev.disabled = true
+            } else {
+                btnPrev.disabled = false
+            }
             if (currentPage === maxPage) {
+                btnNext.disabled = true 
                 quizTimeout = setTimeout(() => {
                     magicPoofAudio.play()
                     quiz.style.display = 'block'
                 }, 5000)
             } else {
+                btnNext.disabled = false
                 if (quizTimeout) {
                     clearTimeout(quizTimeout)
                 }
