--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             top: 0;
             left: 0;
             width: 100%;
-            height: 100%;
+            min-height: 100%;
             background-color: rgba(255, 255, 255, 0.5);
         }
         .quiz {
@@ -131,6 +131,14 @@
             bottom: 0.6rem;
             left: 50%;
             background-color: white;
+        }
+        img {
+            user-drag: none;
+            -webkit-user-drag: none;
+            user-select: none;
+            -moz-user-select: none;
+            -webkit-user-select: none;
+            -ms-user-select: none;
         }
         @media screen and (max-width: 1023px) {
             .page {
@@ -330,7 +338,7 @@
         <button class="btn-nav btn-next" onclick="nextPage()">›</button>
         <p id="pageNumber"></p>
     </div>
-    <script src="assets/js/swipe.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Tocca.js/2.0.9/Tocca.min.js" integrity="sha512-1pl1Qq8Gv3E5/X79OCHr1Dada1FusKwnsKEnsH5t2i9D9hJDClClV8wEMRekcdeC+RCNQpSmPpOT0MpVlWfyhQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script>
         const TEMPLATES = document.querySelectorAll('.book template')
         
@@ -403,8 +411,8 @@
             }
         }
         const book = document.getElementById('book')
-        addSwipeEvent(book, "swipeLeft", nextPage)
-        addSwipeEvent(book, "swipeRight", prevPage)
+        book.addEventListener('swipeleft', nextPage)
+        book.addEventListener('swiperight', prevPage)
         document.onkeydown = (e) => {
             e = e || window.event;
 
