--- a/index.html
+++ b/index.html
@@ -70,8 +70,9 @@
         }        
         .page img {
             max-width: 100%;
+            max-height: 100%;
+            height: calc(100vh - 210px);
             width: auto;
-            max-height: calc(100vh - 210px);
         }   
         .fade {
             opacity: 0;
